opam-version: "1.2"
name:         "reactor"
bug-reports:  "https://github.com/travisbrady/ocaml-libreactor/issues"
homepage:     "https://github.com/travisbrady/ocaml-libreactor"
dev-repo:     "git+https://github.com/travisbrady/ocaml-libreactor.git"
maintainer:   "Laurent Mazare <travis.brady@gmail.com>"
authors:      [ "Travis Brady" ]

version: "dev"

#build: [["jbuilder" "build" "--only-packages" "reactor" "--root" "." "-j" jobs "@install"]]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
install: []
remove:  []

depends: [
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "ocamlfind" {build}
  "jbuilder" {build}
  "base" {build & >= "v0.9.2"}
  "stdio" {build & >= "v0.9.0"}
  "configurator" {build & >= "v0.9.1"}
]

depopts: [
]

conflicts: [
]

available: [ ocaml-version >= "4.03" ]
